--- a/portfolio-frontend.html
+++ b/portfolio-frontend.html
@@ -11,7 +11,8 @@
         <h1><center>Welcome to my Portfolio</center></h1>
         <img width="10%" height="15%" src="images/Peter_Saba_Photo.jpg"/>
         <h2><u>About me</u></h2>
-        <p>Hello my name is Peter Saba I am a Lebanese citizen living in Kour El Batroun.<br/>
+        <p>
+            Hello my name is Peter Saba I am a Lebanese citizen.<br/>
             I am a Computer Science student at the Lebanese University currently enrolled in SE Factory's FSW bootcamp
         </p>
 
@@ -45,7 +46,7 @@
             <li>C</li>
         </ol>
         
-        <p></p>If you want to check my LinkedIn profile <a href="https://www.linkedin.com/in/peter-saba-1269a319b/">click here!</a></p>
+        <p>If you want to check my LinkedIn profile <a href="https://www.linkedin.com/in/peter-saba-1269a319b/">click here!</a></p>
         <h2><u>Contact Me</u></h2>
         <form>
 
